// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-placeholder> Component Placeholder size: large 1`] = `
<bolt-placeholder size="large">
  <div class="c-bolt-placeholder">
    <div class="c-bolt-placeholder__wrapper ">
      <div class="c-bolt-placeholder__wrapper-y">
      </div>
      <div class="c-bolt-placeholder__wrapper-x">
      </div>
      <ssr-keep for="bolt-placeholder"
                class="c-bolt-placeholder__content c-bolt-placeholder__content--large"
      >
        large Bolt Placeholder
      </ssr-keep>
    </div>
  </div>
</bolt-placeholder>
`;

exports[`<bolt-placeholder> Component Placeholder size: medium 1`] = `
<bolt-placeholder size="medium">
  <div class="c-bolt-placeholder">
    <div class="c-bolt-placeholder__wrapper ">
      <div class="c-bolt-placeholder__wrapper-y">
      </div>
      <div class="c-bolt-placeholder__wrapper-x">
      </div>
      <ssr-keep for="bolt-placeholder"
                class="c-bolt-placeholder__content c-bolt-placeholder__content--medium"
      >
        medium Bolt Placeholder
      </ssr-keep>
    </div>
  </div>
</bolt-placeholder>
`;

exports[`<bolt-placeholder> Component Placeholder size: small 1`] = `
<bolt-placeholder size="small">
  <div class="c-bolt-placeholder">
    <div class="c-bolt-placeholder__wrapper ">
      <div class="c-bolt-placeholder__wrapper-y">
      </div>
      <div class="c-bolt-placeholder__wrapper-x">
      </div>
      <ssr-keep for="bolt-placeholder"
                class="c-bolt-placeholder__content c-bolt-placeholder__content--small"
      >
        small Bolt Placeholder
      </ssr-keep>
    </div>
  </div>
</bolt-placeholder>
`;

exports[`<bolt-placeholder> Component Placeholder size: xlarge 1`] = `
<bolt-placeholder size="xlarge">
  <div class="c-bolt-placeholder">
    <div class="c-bolt-placeholder__wrapper ">
      <div class="c-bolt-placeholder__wrapper-y">
      </div>
      <div class="c-bolt-placeholder__wrapper-x">
      </div>
      <ssr-keep for="bolt-placeholder"
                class="c-bolt-placeholder__content c-bolt-placeholder__content--xlarge"
      >
        xlarge Bolt Placeholder
      </ssr-keep>
    </div>
  </div>
</bolt-placeholder>
`;

exports[`<bolt-placeholder> Component Placeholder size: xsmall 1`] = `
<bolt-placeholder size="xsmall">
  <div class="c-bolt-placeholder">
    <div class="c-bolt-placeholder__wrapper ">
      <div class="c-bolt-placeholder__wrapper-y">
      </div>
      <div class="c-bolt-placeholder__wrapper-x">
      </div>
      <ssr-keep for="bolt-placeholder"
                class="c-bolt-placeholder__content c-bolt-placeholder__content--xsmall"
      >
        xsmall Bolt Placeholder
      </ssr-keep>
    </div>
  </div>
</bolt-placeholder>
`;

exports[`<bolt-placeholder> Component placeholder component 1`] = `
<bolt-placeholder size="large">
  <div class="c-bolt-placeholder">
    <div class="c-bolt-placeholder__wrapper ">
      <div class="c-bolt-placeholder__wrapper-y">
      </div>
      <div class="c-bolt-placeholder__wrapper-x">
      </div>
      <ssr-keep for="bolt-placeholder"
                class="c-bolt-placeholder__content c-bolt-placeholder__content--large"
      >
        Bolt Placeholder Example
      </ssr-keep>
    </div>
  </div>
</bolt-placeholder>
`;

exports[`<bolt-placeholder> Component placeholder component animated 1`] = `
<bolt-placeholder size="large"
                  animated
>
  <div class="c-bolt-placeholder">
    <div class="c-bolt-placeholder__wrapper c-bolt-placeholder__wrapper--animated">
      <div class="c-bolt-placeholder__wrapper-y">
      </div>
      <div class="c-bolt-placeholder__wrapper-x">
      </div>
      <ssr-keep for="bolt-placeholder"
                class="c-bolt-placeholder__content c-bolt-placeholder__content--large"
      >
        Bolt Placeholder Example
      </ssr-keep>
    </div>
  </div>
</bolt-placeholder>
`;

exports[`<bolt-placeholder> Component stacked <bolt-placeholder> 1`] = `
<bolt-placeholder size="large"
                  animated
>
  <div class="c-bolt-placeholder">
    <div class="c-bolt-placeholder__wrapper c-bolt-placeholder__wrapper--animated">
      <div class="c-bolt-placeholder__wrapper-y">
      </div>
      <div class="c-bolt-placeholder__wrapper-x">
      </div>
      <ssr-keep for="bolt-placeholder"
                class="c-bolt-placeholder__content c-bolt-placeholder__content--large"
      >
        Bolt Placeholder Example
      </ssr-keep>
    </div>
  </div>
</bolt-placeholder>
<bolt-placeholder size="large"
                  animated
>
  <div class="c-bolt-placeholder">
    <div class="c-bolt-placeholder__wrapper c-bolt-placeholder__wrapper--animated">
      <div class="c-bolt-placeholder__wrapper-y">
      </div>
      <div class="c-bolt-placeholder__wrapper-x">
      </div>
      <ssr-keep for="bolt-placeholder"
                class="c-bolt-placeholder__content c-bolt-placeholder__content--large"
      >
        Bolt Placeholder Example
      </ssr-keep>
    </div>
  </div>
</bolt-placeholder>
`;
